--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,7 +3,9 @@ kind: ConfigMap
 metadata:
   name: eureka-cm
 data:
-  eureka_service_address: http://eureka-0.eureka:8761/eureka
+  # if you want to deploy n instances of eureka cluster, 
+  # you should set eureka_service_address: http://eureka-0.eureka:8761/eureka,...,http://eureka-(n-1).eureka:8761/eureka
+  eureka_service_address: http://eureka-0.eureka:8761/eureka,http://eureka-1.eureka:8761/eureka,http://eureka-2.eureka:8761/eure
 
 ---
 
@@ -44,12 +46,37 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8761
+          resources:
+            requests:
+              memory: "1Gi"
+              cpu: "500m"
+          limits:
+            memory: "1200Mi"
+            cpu: "500m"
           env:
             - name: EUREKA_SERVER_ADDRESS
               valueFrom:
                 configMapKeyRef:
                   name: eureka-cm
                   key: eureka_service_address
+            - name: ENVIRONMENT
+              value: "prod"
+            - name: JVM_OPTS
+              value: "-Xms1g -Xmx1g"
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8761
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8761
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
 
 ---
 
