--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,8 @@ server:
 spring:
   application:
     name: EES-EUREKA-SERVER
+  profiles:
+    active: ${ENVIRONMENT:prod}
 eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      default-zone: http://localhost:8761/eureka #${EUREKA_SERVER_ADDRESS}
-  instance:
-    prefer-ip-address: true
-    hostname: http://localhost #"${HOSTNAME}.eureka"
+  environment: ${ENVIRONMENT:prod}
 
