--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,8 @@ metadata:
 data:
   # if you want to deploy n instances of eureka cluster, 
   # you should set eureka_service_address: http://eureka-0.eureka:8761/eureka,...,http://eureka-(n-1).eureka:8761/eureka
-  eureka_service_address: http://eureka-0.eureka:8761/eureka,http://eureka-1.eureka:8761/eureka,http://eureka-2.eureka:8761/eure
+  eureka_service_address: http://eureka-0.eureka:8761/eureka,http://eureka-1.eureka:8761/eureka,http://eureka-2.eureka:8761/eureka
+  spring_profiles_active: prod
 
 ---
 
@@ -60,7 +61,10 @@ spec:
                   name: eureka-cm
                   key: eureka_service_address
             - name: ENVIRONMENT
-              value: "prod"
+              valueFrom:
+                configMapKeyRef:
+                  name: eureka-cm
+                  key: spring_profiles_active
             - name: JVM_OPTS
               value: "-Xms1g -Xmx1g"
           livenessProbe:
