--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   # if you want to deploy n instances of eureka cluster, 
   # you should set eureka_service_address: http://eureka-0.eureka:8761/eureka,...,http://eureka-(n-1).eureka:8761/eureka
-  eureka_service_address: http://eureka-0.eureka:8761/eureka,http://eureka-1.eureka:8761/eureka,http://eureka-2.eureka:8761/eureka
+  eureka_service_address: http://eureka-0.eureka:8761/eureka
   spring_profiles_active: prod
 
 ---
@@ -32,7 +32,7 @@ metadata:
   name: eureka
 spec:
   serviceName: "eureka"
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: eureka
