--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -11,7 +11,7 @@ data:
   keycloak_auth_server_url: https://keycloak-enexse-u12566.vm.elestio.app/
   keycloak_resource: ees-ms-keycloak
   keycloack_credentials_secret: JbkQ9O7KpRc0HOUVJNOw5TY8dJQT4W4V
-  mongodb_port: 27017
+  mongodb_port: "27017"
   mongodb_host: mongodb+srv://ees-intranet-web:ees-intranet-web@ees-intranet-web.mp0oobs.mongodb.net/?retryWrites=true&w=majority&appName=ees-intranet-web
   mongodb_database: ees-ms-users
 
