--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,8 +2,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    service-url:
-      default-zone: ${EUREKA_SERVER_ADDRESS}
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVER_ADDRESS}
   instance:
     prefer-ip-address: true
     hostname: "${HOSTNAME}.eureka"
