--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: EES-EUREKA-SERVER
   profiles:
-    active: ${ENVIRONMENT:prod}
+    active: ${ENVIRONMENT}
 eureka:
-  environment: ${ENVIRONMENT:prod}
+  environment: ${ENVIRONMENT}
 
